# pptx-renderer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  knip.config.ts  package.json  pnpm-lock.yaml  vite.config.browser.ts  vite.config.ts
test/e2e/: pyproject.toml  server.py  test_pypptx_generator_cases.py  test_server_proxy.py  testdata_paths.py
test/e2e/oracle/: README.md  case_compiler.py  generate_cases.py  powerpoint_oracle.py
test/e2e/oracle/cases-pypptx/: oracle-pypptx-chart-0001-column-clustered-3series.json  oracle-pypptx-chart-0002-column-negative-values.json  oracle-pypptx-chart-0003-column-stacked-3series.json  oracle-pypptx-chart-0004-column-100-stacked.json  oracle-pypptx-chart-0005-bar-clustered-single.json  oracle-pypptx-chart-0006-bar-stacked-2series.json  oracle-pypptx-chart-0007-line-3series.json  oracle-pypptx-chart-0008-line-with-markers.json  oracle-pypptx-chart-0009-line-stacked.json  oracle-pypptx-chart-0010-pie-5-categories.json  oracle-pypptx-chart-0011-pie-exploded.json  oracle-pypptx-chart-0012-doughnut-3-categories.json  oracle-pypptx-chart-0013-doughnut-exploded.json  oracle-pypptx-chart-0014-area-2series.json  oracle-pypptx-chart-0015-area-stacked-3series.json  oracle-pypptx-chart-0016-scatter-2-clusters.json  oracle-pypptx-chart-0017-scatter-smooth-sine.json  oracle-pypptx-chart-0018-radar-2series.json  oracle-pypptx-chart-0019-radar-filled-single.json  oracle-pypptx-chart-0020-bubble-4-points.json  (+81 more)
test/e2e/scripts/: generate_pypptx_cases.py  one_shot_full_ground_truth.py  run_all_shapes_eval.py
(+119 files in other folders)
